--- a/contenedorEjemplos.html
+++ b/contenedorEjemplos.html
@@ -83,6 +83,8 @@
             <div class="ejemplo">
                 <div id="btn-contenedor"><button class="iconoCopy"><img src="img/iconos/copiar.png" alt="Copiar" width="20px" height="20px"></button></div>
                 <div id="ej-contenedor"></div>
+                <iframe id="iframe" name="codeFrame" width="100%" height="400px" frameborder="0"></iframe>
+                
                
                 <!--                 
                 <div class="colorear">
